fix bug that made the edit icon in BookComponent be smaller if the title was too long

--- a/src/components/bookComponent/BookComponent.module.css
+++ b/src/components/bookComponent/BookComponent.module.css
@@ -9,6 +9,7 @@
 .title {
     margin: 0;
     font-size: 1.3rem;
+    max-width: 90%;
 }
 
 .gender {
